# MASHM

./: CMakeLists.txt  README.md
bindings/: CMakeLists.txt  mashmGptl.F90  mashmGptlDummy.F90
cmake/: FindGPTL.cmake  FindSphinx.cmake
doc/: CMakeLists.txt  Doxyfile.in  MashmDoxygenMainpage.dox  README.md
doc/manual/: CMakeLists.txt  UserManual.rst  conf.py  index.rst
src/: CMakeLists.txt  Mashm.c  Mashm.h  MashmCommCycle.c  MashmCommCycle.h  MashmConfig.h.in  MashmDefs.h  MashmFortranBindings.h  MashmIntraNodeComm.c  MashmIntraNodeComm.h  MashmPrivate.c  MashmPrivate.h  intraNodeComm.c  intraNodeComm.h  mashm.c  mashm.h  mashmBool.h  mashmCommCycle.h
src/fortran/: CMakeLists.txt  MashmFortran.F90  Mashmf.h  mashmFortran.F90  mashmf.h
test/: CMakeLists.txt  grid.F90  nodalComm.c  nodalCommFtn.F90  openMpPoisson3d.F90  poisson3d.F90  poisson3dPack.F90  restart.F90
test/namelists/: poisson3d.nl  poisson3d_96_96_96.nl  unit3d.nl
test/sharedMemoryAllignment/: align.F90
test/testHelpers/: CMakeLists.txt  decomp2d.c  decomp2d.h
