
SET(MASHM_BINDINGS
  mashmGptl.F90)

IF (NOT GPTL_FOUND)
  MESSAGE(STATUS "GPTL not found using dummy bindings")
  SET(MASHM_BINDINGS
    ${MASHM_BINDINGS}
    mashmGptlDummy.F90)
ENDIF ()

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${GPTL_INCLUDE_DIRS}
  )

ADD_LIBRARY(mashmGptlBindings ${MASHM_BINDINGS})
TARGET_LINK_LIBRARIES(mashmGptlBindings ${GPTL_LIBRARIES})
