
FILE(GLOB MASHM_LIB_HEADERS *.h)

SET(MASHM_LIB_SRCS
  MashmIntraNodeComm.c
  MashmCommCycle.c
  MashmPrivate.c
  Mashm.c
)

CONFIGURE_FILE(MashmConfig.h.in ${CMAKE_CURRENT_BINARY_DIR}/MashmConfig.h)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}
                    ${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(mashm ${MASHM_LIB_SRCS})

# Fortran bindings
ADD_SUBDIRECTORY(fortran)
INSTALL(TARGETS mashm
        ARCHIVE DESTINATION lib)

INSTALL(FILES ${MASHM_LIB_HEADERS}
        DESTINATION include)

