
SET(NODAL_COMM_SRCS
  nodalComm.c)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/testHelpers
  ${CMAKE_SOURCE_DIR}/src
  )
 
#ADD_SUBDIRECTORY(testHelpers)

ADD_EXECUTABLE(nodalComm ${NODAL_COMM_SRCS})

#TARGET_LINK_LIBRARIES(nodalComm testHelpers mashm)
TARGET_LINK_LIBRARIES(nodalComm mashm)
